# welkin-python

./: LICENSE  README.md  requirements.txt  setup.cfg  setup.py
tests/: test_auth.py  test_empty.py
tests/api_resources/: test_patient.py
welkin/: __init__.py  auth.py  auth_error.py  util.py
welkin/api_resources/: __init__.py  patient.py
welkin/api_resources/abstract/: __init__.py  api_resource.py  createable_api_resource.py  getable_api_resource.py  listable_api_resource.py  updateable_api_resource.py
