[metadata]
# replace with your username:
name = welkin-python
version = 0.0.1
author = Sonu George
author_email = sonu.g@spericorn.com
description = Welkin Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sonugspericorn/welkin-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
